--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - run: |
-        apt-get upgrade -qqy
+        apt-get update -qqy
         apt-get install xvfb xserver-xephyr x11-utils
     - name: Go Test
       uses: cedrickring/golang-action@1.5.2
